# rusty-raft

./: Cargo.toml
docs/: references.md
proto/: raft.proto
src/: main.rs  node.rs
src/raft/: append.rs  election.rs  mod.rs  state.rs  types.rs
src/transport/: grpc.rs  mod.rs
