[package]
name = "rusty-raft"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"                                              # Error handling
clap = { version = "4.0", features = ["derive"] }           # Command-line argument parsing
config = "0.15.15"                                          # Configuration management
prost = "0.14.1"                                            # Protocol Buffers
rand = "0.9.2"                                              # Random number generation for leader election
redis = { version = "0.32.5", features = ["tokio-comp"] }   # Redis client
serde = { version = "1.0", features = ["derive"] }          # Serialization/deserialization
serde_json = "1.0"                                          # JSON serialization/deserialization
tonic = { version = "0.14.2", features = ["transport"] }    # gRPC over HTTP
tokio = { version = "1", features = ["full"] }              # Asynchronous runtime
tracing = "0.1"                                             # Logging
tokio-test = "0.4"                                          # Testing utilities for Tokio

[build-dependencies]
tonic-build = "0.14.2"